<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as7343_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for the ams-OSRAM AS7343 14-channel multi-spectral sensor over I2C. Designed for Raspberry Pi 4/5.</description>
  <maintainer email="1388693+DingoOz@users.noreply.github.com">DingoOz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>backward_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>perseus_interfaces</depend>
  <depend>fd-wrapper</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
