<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crater_exit</name>
  <version>0.1.0</version>
  <description>Crater exit behavior node - detects when the rover is stuck in a crater and drives forward until IMU pitch indicates the rim has been crested</description>
  <maintainer email="team@perseus.dev">Perseus Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>perseus_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
