<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>input_devices</name>
  <version>0.0.1</version>
  <description>Nodes and launch files for handling input devices</description>
  <maintainer email="59348282+RandomSpaceship@users.noreply.github.com">james</maintainer>
  <license>MIT</license>

  <!-- node dependencies -->
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <!-- launch dependencies -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
